# PeopleTracker

./: .gitignore  CMakeLists.txt  README.md
src/: PeopleTracker.cpp
